--- a/package.json
+++ b/package.json
@@ -1,34 +1,26 @@
 {
-  "name": "ha-sip",
+  "name": "sip-doorbell",
   "version": "1.0.0",
-  "description": "A SIP client inside home assistant!",
-  "main": "sipjs-card.js",
+  "description": "A card for SIP doorbells inside home assistant! Made possible by https://github.com/TECH7Fox/sip-hass-card and https://github.com/AlexxIT/WebRTC",
+  "main": "sip-doorbell.js",
   "scripts": {
     "build": "webpack --progress --config webpack.config.js --mode production"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TECH7Fox/HA-SIP.git"
   },
   "keywords": [
     "sip",
     "home-assistant"
   ],
-  "author": "Jordy Kuhne",
+  "author": "Suxsem",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/TECH7Fox/HA-SIP/issues"
-  },
-  "homepage": "https://github.com/TECH7Fox/HA-SIP#readme",
   "devDependencies": {
-    "ts-loader": "^9.2.7",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.2",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "ts-loader": "^9.5.1",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "lit": "^2.2.0",
-    "jssip": "^3.9.0"
+    "jssip": "^3.10.1",
+    "lit": "^3.1.3"
   }
 }
