--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "target": "es2017",
-    "module": "es2015",
+    "target": "ES2021",
+    "module": "ES2020",
     "strict": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "importHelpers": true,
     "sourceMap": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "lib": [
-      "es2017",
+      "es2021",
       "DOM"
     ],
     "types": []
